# bcda_claims_sandbox

./: .env  .gitignore  README.md  dbt_project.yml  pyproject.toml
config/: configCoverage.ini  configExplanationOfBenefits.ini  configPatient.ini
macros/: tmp_macro.sql  try_to_cast_date.sql
models/claim_analysis/: cost_per_hcpcs.sql  models.yml
models/lindsay/: about_this_folder.md  lindsay_notes.md  model_doc.md  src_lindsay.yml  stg_lindsay.yml  tmp_create_table.sql  tmp_pivot_jinja.sql  tmp_stg1.sql  tmp_stg2.sql
models/lindsay/cms_hcc/: hcc_process.md
models/lindsay/cms_hcc/final/: cms_hcc__patient_risk_scores.sql
models/lindsay/cms_hcc/seeds/: cms_hcc__cpt_hcpcs.sql  cms_hcc__disabled_interaction_factors.sql  cms_hcc__disease_interaction_factors.sql  cms_hcc__enrollment_interaction_factors.sql
models/lindsay/cms_hcc/staging/: cms_hcc__stg_core__condition.sql  cms_hcc__stg_medical_claim.sql
models/lindsay/dbt/: stg_lindsay.yml  tmp_combine_stgs.sql  tmp_testing_macro.sql
models/statistics/: models.yml
notebooks/: bcda_api_download.ipynb
notebooks/analysis/: environment.yml  lindsay.ipynb  snowflake_conn.py
notebooks/lindsay/cms_hcc/final/: cms_hcc__patient_risk_factors.sql
notebooks/lindsay/cms_hcc/seeds/: cms_hcc__adjustment_rates.sql  cms_hcc__demographic_factors.sql  cms_hcc__disease_hierarchy.sql  (+1 more)
notebooks/lindsay/dbt/: tmp_create_view.sql  tmp_pivot.sql
notebooks/queries/cms_hcc/: hcc_process.md
notebooks/queries/pmpm/: pmpm_process.md
src/: config.py  download.py  main.py  parseFihr.py  snowflake.py
(+3 files in other folders)
