[tool.poetry]
name = "dbt-claims-sandbox"
version = "0.1.0"
description = ""
authors = ["lwarrenburg <lindsay.a.warrenburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
