[tool.poetry]
name = "bcda-claims-sandbox"
version = "0.1.0"
description = ""
authors = ["lwarrenburg <lindsay.a.warrenburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
